# Crypto_prediction

./: .dockerignore  CMakeLists.txt  Dockerfile  Documentation.docx  README.md  docker-compose.yml  requirements.txt
data/model_output/: predictions_ADAUSDT_data_.json  predictions_AVAXUSDT_data_.json  predictions_BNBUSDT_data_.json  predictions_BTCUSDT_data_.json  predictions_DOTUSDT_data_.json  predictions_ETHUSDT_data_.json  predictions_MATICUSDT_data_.json  predictions_SOLUSDT_data_.json  predictions_TRXUSDT_data_.json  predictions_XRPUSDT_data_.json
data/parser_input/: ADAUSDT_data_.json  AVAXUSDT_data_.json  BNBUSDT_data_.json  BTCUSDT_data_.json  DOTUSDT_data_.json  ETHUSDT_data_.json  MATICUSDT_data_.json  SOLUSDT_data_.json  TRXUSDT_data_.json  XRPUSDT_data_.json
scripts/: run_pipeline.sh
src/cpp/parsers/: CMakeLists.txt  parser_main.cpp
src/cpp/visualization/: CMakeLists.txt  visualization.cpp
src/python/model/: model.py
